--- a/styles/style.css
+++ b/styles/style.css
@@ -225,37 +225,47 @@ nav ul li img {
 
 
 /* last section */
-.last-games {
-    margin-top: 100px;
+
+
+
+
+/*  last*/
+.main {
     display: flex;
-    /* justify-content: center; */
+    margin-left: 50px;
+    margin-right: 50px;
+   
+}
+
+.main-items {
+    display: flex;
+    border: 1px solid black;
     border-radius: 50px;
     background: #FFF;
-
-
-}
-
-.items {
-    display: flex;
-    justify-content: center;
-    border-radius: 50px;
-    background: #FFF;
-    /* max-width: 295px; */
-    max-height: 80px;
+    align-items: center;
 
 }
-.items img{
-    /* width: 60px;
-    height: 60px; */
+
+.item-text {
+    padding: 28px 16px;
+    color: #0B0223;
+    font-size: 20px;
+    font-weight: 600;
 }
 
+.main-items img {
+    padding-left: 10px;
+    gap: 20px;
+
+}
+.main a{
+    text-decoration: none;
+    
+}
+    
 
 
-
-
-
-
-
+.main-items
 
 /* Mobile Media Query */
 @media screen and (max-width:576px) {
@@ -264,7 +274,8 @@ nav ul li img {
     nav ul,
     .left,
     .right,
-    .banner {
+    .banner,
+    .feature {
         flex-direction: column;
         align-items: center;
     }
@@ -288,7 +299,8 @@ nav ul li img {
         padding-bottom: 50px;
     }
 
-    .banner-img {
+    .banner-img img {
+        /* background-size: ; */
         max-width: 425px;
     }
 
@@ -300,7 +312,9 @@ nav ul li img {
 
 /* Tablet Media Query */
 @media screen and (min-width:576px) and (max-width:992px) {
-    .banner {
+
+    .banner,
+    .feature {
         flex-direction: column;
     }
 
