--- a/styles/style.css
+++ b/styles/style.css
@@ -224,6 +224,9 @@ nav ul li img {
     font-weight: 600;
 
 }
+.overlay a{
+    text-decoration: none;
+}
 
 /* /section-feature */
 .feature-content {
@@ -245,7 +248,7 @@ nav ul li img {
 
 .feature {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     margin-top: 0px;
     /* margin-left: 7%; */
 }
@@ -439,11 +442,12 @@ footer {
     }
 
     .image-container {
+        
         grid-template-columns: repeat(1, 1fr);
     }
     .overlay {
-        width: 70.5%;
-        height: 56%;
+        width: 81%;
+        height: 68.8%;
     }
 
     .right {
@@ -463,7 +467,7 @@ footer {
 
     .banner-img img {
         /* background-size: ; */
-        max-width: 425px;
+        max-width: 420px;
     }
 
     .section-title-O {
@@ -512,7 +516,9 @@ footer {
     .main-1 {
         margin-bottom: 0px;
     }
-
+    .main-items{
+        margin-top: 15px;
+    }
     .image-container {
         justify-items: center;
         /* justify-content: center; */
@@ -520,15 +526,26 @@ footer {
 
     .big {
         margin-left: 0px;
+        max-width: 400px;
+        
     }
 
     .feature {
-        flex-wrap: wrap;
+         width: 100%;
+         height: 100%;
     }
 
     .big img {
-        width: 425px;
-        height: 200px;
+        max-width: 350px;
+        max-height: auto;
+    }
+    .small img{
+        max-width: 250px;
+        padding-left: 0px;
+        margin-top: 100px;
+    }
+    .games{
+        margin-left: 80px;
     }
 
 }
@@ -537,7 +554,7 @@ footer {
 @media screen and (min-width:576px) and (max-width:992px) {
 
     .banner,
-    .feature {
+    .feature,.main-1,.main-2 {
         flex-direction: column;
     }
 
@@ -546,7 +563,33 @@ footer {
         justify-items: center;
         justify-content: center;
     }
-
+    .overlay {
+        width: 45.6%;
+        height: 88.5%;
+    }
+    .main-2,.main-1{
+        margin-left: auto;
+    }
+    .main-2{
+        margin-top: 0px;
+    }
+    .main-1{
+        margin-bottom: 0px;
+    }
+    .main-items{
+        margin-top: 15px;
+    }
+    .games{
+        margin-left: 300px;
+    }
+    .big {
+        margin-left: 0px;
+        max-width: auto;
+        
+    }
+    .left{
+        margin-left: 20px;
+    }
 
 
 
