--- a/styles/style.css
+++ b/styles/style.css
@@ -192,8 +192,8 @@ nav ul li img {
 }
 
 .overlay {
-    width: 100%;
-    height: 51%;
+    width: 342px;
+    height: 400px;
     border-radius: 15px;
     top: 0;
     left: 0;
@@ -445,10 +445,10 @@ footer {
         
         grid-template-columns: repeat(1, 1fr);
     }
-    .overlay {
+    /* .overlay {
         width: 81%;
         height: 68.8%;
-    }
+    } */
 
     .right {
         margin-left: 50px;
@@ -563,10 +563,10 @@ footer {
         justify-items: center;
         justify-content: center;
     }
-    .overlay {
-        width: 45.6%;
-        height: 88.5%;
-    }
+    /* .overlay {
+        width: 342px;
+        height: 400px;
+    } */
     .main-2,.main-1{
         margin-left: auto;
     }
